--- a/wx-pay-v3/src/main/resources/application.yml
+++ b/wx-pay-v3/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8090 #????
+  port: 8090 #端口号
 
 spring:
   application:
-    name: payment-demo #?????
+    name: payment-demo #服务名
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -16,9 +16,9 @@ spring:
     password: 123456
 
 mybatis-plus:
-  configuration: #sql??
+  configuration: #sql日志打印控制台
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath:com/atguigu/paymentdemo/mapper/xml/*.xml
+  mapper-locations: classpath:com/zy/wxpayv3/mapper/xml/*.xml
 
 logging:
   level:
