--- a/wx-pay-v3/src/main/resources/wxpay.properties
+++ b/wx-pay-v3/src/main/resources/wxpay.properties
@@ -5,7 +5,7 @@ wxpay.mch-id=1558950191
 wxpay.mch-serial-no=34345964330B66427E0D3D28826C4993C77E631F
 
 # ??????
-wxpay.private-key-path=apiclient_key.pem
+wxpay.private-key-path=wx-pay-v3/apiclient_key.pem
 # APIv3??
 wxpay.api-v3-key=UDuLFDcmy5Eb6o0nTNZdu6ek4DDh4K8B
 # APPID
@@ -14,7 +14,8 @@ wxpay.appid=wx74862e0dfcf69954
 wxpay.domain=https://api.mch.weixin.qq.com
 # ????????
 # ?????????ngrok????????????????
-wxpay.notify-domain=https://500c-219-143-130-12.ngrok.io
+#wxpay.notify-domain=https://500c-219-143-130-12.ngrok.io
+wxpay.notify-domain=http://zhangy.free.idcfengye.com
 
 # APIv2??
 wxpay.partnerKey: T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
