--- a/wx-pay-v3/pom.xml
+++ b/wx-pay-v3/pom.xml
@@ -82,6 +82,13 @@
             <version>0.0.3</version>
         </dependency>
 
+        <!--支付宝sdk-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.57.ALL</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
