--- a/wx-pay-v3/src/main/resources/application.yml
+++ b/wx-pay-v3/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/payment_demo?serverTimezone=GMT%2B8&characterEncoding=utf-8
     username: root
-    password: 123456
+    password: root
 
 mybatis-plus:
   configuration: #sql日志打印控制台
